Melhorias no codigo